Instruction to VM Options to run project